--- a/callForPapers.html
+++ b/callForPapers.html
@@ -56,7 +56,7 @@
             <li><a class="nav-link scrollto" href="keynotes.html">Keynote</a></li>
             <li><a class="nav-link scrollto" href="program.html">Agenda</a></li>
             <!-- <li><a class="nav-link scrollto" href="acceptedPapers.html">Accepted Papers</a></li> -->
-            <li><a class="nav-link scrollto" href="organization.html">Organization</a></li>
+            <li><a class="nav-link scrollto" href="organization.html">Organização</a></li>
             <li><a class="nav-link scrollto" href="previousEditions.html">Previous Editions</a></li>
           </ul>
         </ul>
