--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <a
                                     class="nav-link scrollto"
                                     href="organization.html"
-                                    >Organization</a
+                                    >Organização</a
                                 >
                             </li>
                             <li>
