--- a/previousEditions.html
+++ b/previousEditions.html
@@ -109,7 +109,7 @@
                                 <a
                                     class="nav-link scrollto"
                                     href="organization.html"
-                                    >Organization</a
+                                    >Organização</a
                                 >
                             </li>
                             <li>
