--- a/attending.html
+++ b/attending.html
@@ -115,7 +115,7 @@
                                 <a
                                     class="nav-link scrollto"
                                     href="organization.html"
-                                    >Organization</a
+                                    >Organização</a
                                 >
                             </li>
                             <li>
