--- a/keynotes.html
+++ b/keynotes.html
@@ -116,7 +116,7 @@
                                 <a
                                     class="nav-link scrollto"
                                     href="organization.html"
-                                    >Organization</a
+                                    >Organização</a
                                 >
                             </li>
                             <li>
