--- a/organization.html
+++ b/organization.html
@@ -46,19 +46,15 @@
 
         <style>
             .member-info-content {
-                text-align: center;
-                width: 100%;
+                text-align: left;
+                width: 80%;
             }
             .member-info-content h4 {
-                text-align: center;
-                margin: 10px 0;
+                text-align: left;
             }
             .member-info-content span {
-                display: block;
-                text-align: center;
-            }
-            .member-info {
-                padding: 15px;
+                display: flex;
+                text-align: left;
             }
         </style>
 
@@ -150,7 +146,7 @@
             <section id="organizing" class="team">
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
-                        <p>Organização</p>
+                        <p>Coordenação Geral</p>
                     </div>
 
                     <!-- Coordenação Geral -->
@@ -162,7 +158,6 @@
                                     <div class="member-info-content">
                                         <h4>Kecia Aline Marques Ferreira</h4>
                                         <span>CEFET-MG</span>
-                                        <p>Coordenação Geral</p>
                                     </div>
                                 </div>
                             </div>
