--- a/attending.html
+++ b/attending.html
@@ -75,42 +75,35 @@
                         <ul>
                             <li>
                                 <a class="nav-link scrollto" href="index.html"
-                                    >Home</a
+                                    >Início</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto active"
                                     href="attending.html"
-                                    >Attending</a
+                                    >Inscrições</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="callForPapers.html"
-                                    >Call for Papers</a
+                                    >Chamada de Trabalhos</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="keynotes.html"
-                                    >Keynote</a
+                                    >Palestrantes</a
                                 >
                             </li>
                             <li>
                                 <a class="nav-link scrollto" href="program.html"
-                                    >Agenda</a
+                                    >Programação</a
                                 >
                             </li>
-                            <!-- <li>
-                                <a
-                                    class="nav-link scrollto"
-                                    href="acceptedPapers.html"
-                                    >Accepted Papers</a
-                                >
-                            </li> -->
                             <li>
                                 <a
                                     class="nav-link scrollto"
@@ -118,13 +111,14 @@
                                     >Organização</a
                                 >
                             </li>
-                            <li>
+                            <!-- Hidden Previous Editions link -->
+                            <!-- <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="previousEditions.html"
                                     >Previous Editions</a
                                 >
-                            </li>
+                            </li> -->
                         </ul>
                     </ul>
                     <i class="bi bi-list mobile-nav-toggle"></i>
@@ -134,118 +128,22 @@
         </header>
         <!-- End Header -->
 
+        
         <main id="main">
-            <!-- ======= About Section ======= -->
-            <section id="about" class="about">
+            <!-- ======= Services Section ======= -->
+            <section id="services" class="services section">
+            <div class="container" data-aos="fade-up">
+
                 <div class="section-title">
-                    <p style="font-size: 32px; color: #4e4039">Attending</p>
+                <p>Inscrições</p>
                 </div>
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <div class="col-lg-7 pt-5 pt-lg-0">
-                            <h3 data-aos="fade-up">Venue</h3>
-                            <p
-                                style="
-                                    text-align: justify;
-                                    text-justify: inter-word;
-                                "
-                            >
-                                Presencially at Mar Hotel - R. Barão de Souza Leão, 451 - Boa Viagem, Recife - PE, 51030-300
-                            </p>
 
-                            <br /><br />
-                            <h3 data-aos="fade-up">Registration</h3>
-                            <p
-                                style="
-                                    text-align: justify;
-                                    text-justify: inter-word;
-                                "
-                            >
-                                Registrations are handled by CBSoft. Please
-                                refer to the
-                                <b
-                                    ><a
-                                        class="getstarted scrollto"
-                                        href="https://cbsoft.sbc.org.br/2025/cbsoft/"
-                                        target="_blank"
-                                        >CBSoft 2025</a
-                                    ></b
-                                >
-                                website for further details.
-                            </p>
-                        </div>
-                        <div
-                            class="col-lg-4 d-flex align-items-center justify-content-center about-img"
-                        >
-                            <img
-                                src="assets/img/conference.svg"
-                                class="img-fluid"
-                                alt=""
-                                data-aos="zoom-in"
-                            />
-                        </div>
-                    </div>
+                <div class="row">
+                <h1 class="d-flex justify-content-center">A ser anunciado</h1>
                 </div>
-            </section>
-            <!-- End About Section -->
-
-            <!-- ======= About Section ======= -->
-            <section id="about" class="about">
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <div class="col-lg-7 pt-5 pt-lg-0">
-                            <h3 data-aos="fade-up">Code of Conduct</h3>
-                            <p
-                                style="
-                                    text-align: justify;
-                                    text-justify: inter-word;
-                                "
-                            >
-                                VEM is committed to provide a welcoming space
-                                for all attendees. VEM requests everyone to show
-                                respect for those around you.
-                                <br /><br />
-                                The main goal of a workshop is to promote the
-                                freedom of thought and expression, and the open
-                                exchange of ideas among all participants. This
-                                means that the workshop provides an environment
-                                where participants do not fear any harassment.
-                                <br /><br />
-                                VEM is concerned in promoting a free harassment
-                                workshop experience for all participants,
-                                regardless of race, age, religion (or the lack
-                                of it), gender, gender identity and expression,
-                                sexual orientation, and disability. During the
-                                workshop, all the communication must be
-                                appropriate for all participants, including
-                                talks. Those who violate these rules might be
-                                sanctioned or expelled from the workshop without
-                                a refund.
-                                <br /><br />
-                                If you are being harassed, or you notice another
-                                person is being harassed, or you have any other
-                                concerns, please contact a member of the
-                                workshop staff immediately. The organization
-                                members will be ready to provide you with the
-                                appropriate support.
-                            </p>
-                        </div>
-                        <div
-                            class="col-lg-4 d-flex align-items-center justify-content-center about-img"
-                        >
-                            <img
-                                src="assets/img/attending2.svg"
-                                class="img-fluid"
-                                alt=""
-                                data-aos="zoom-in"
-                            />
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- End About Section -->
-        </main>
-        <!-- End #main -->
+            </div>
+            </section><!-- End Services Section -->
+        </main><!-- End #main -->
 
         <!-- ======= Footer ======= -->
         <div w3-include-html="components/footer.html"></div>
