--- a/index.html
+++ b/index.html
@@ -87,45 +87,36 @@
                     <ul>
                         <ul>
                             <li>
-                                <a
-                                    class="nav-link scrollto active"
-                                    href="index.html"
-                                    >Home</a
+                                <a class="nav-link scrollto active" href="index.html"
+                                    >Início</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="attending.html"
-                                    >Attending</a
+                                    >Inscrições</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="callForPapers.html"
-                                    >Call for Papers</a
+                                    >Chamada de Trabalhos</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="keynotes.html"
-                                    >Keynote</a
+                                    >Palestrantes</a
                                 >
                             </li>
                             <li>
                                 <a class="nav-link scrollto" href="program.html"
-                                    >Agenda</a
+                                    >Programação</a
                                 >
                             </li>
-                            <!-- <li>
-                                <a
-                                    class="nav-link scrollto"
-                                    href="acceptedPapers.html"
-                                    >Accepted Papers</a
-                                >
-                            </li> -->
                             <li>
                                 <a
                                     class="nav-link scrollto"
@@ -133,13 +124,14 @@
                                     >Organização</a
                                 >
                             </li>
-                            <li>
+                            <!-- Hidden Previous Editions link -->
+                            <!-- <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="previousEditions.html"
                                     >Previous Editions</a
                                 >
-                            </li>
+                            </li> -->
                         </ul>
                     </ul>
                     <i class="bi bi-list mobile-nav-toggle"></i>
@@ -157,12 +149,10 @@
                         class="col-lg-8 order-2 order-lg-1 d-flex flex-column justify-content-center"
                     >
                         <h1>
-                            13th Workshop on Software Visualization, Evolution
-                            and Maintenance
+                            1 Encontro Mineiro de Mulheres na Computação
                         </h1>
                         <h3>
-                            Co-located with CBSoft, 22nd of September 2025 (In
-                            Person)
+                            Local a definir
                         </h3>
                     </div>
                     <div class="col-lg-4 order-1 order-lg-2 hero-img">
@@ -184,33 +174,22 @@
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-8 pt-5 pt-lg-0">
-                            <h3 data-aos="fade-up">About VEM 2025</h3>
+                            <h3 data-aos="fade-up" style="margin-bottom: 25px;">Sobre o Encontro Mineiro de Mulheres na Computação</h3>
                             <p
                                 style="
                                     text-align: justify;
                                     text-justify: inter-word;
                                 "
                             >
-                                The 13th Workshop on Software Visualization,
-                                Maintenance and Evolution (VEM 2025) aims at
-                                fostering the integration of the software
-                                visualization, evolution and maintenance
-                                communities, providing a forum where researchers
-                                and practitioners from academia and industry can
-                                present their work and exchange ideas on the
-                                principles, practices and innovations related to
-                                their respective areas of interest. VEM is also
-                                a great opportunity for strengthening research
-                                group collaborations, as well as identifying new
-                                research opportunities.
-                                <br /><br />
-                                In 2025, VEM is co-located with the 16th
-                                Brazilian Conference on Software: Theory and
-                                Practice (<a
-                                    href=" https://cbsoft.sbc.org.br/2025/"
-                                    target="_blank"
-                                    >CBSoft 2025</a
-                                >).
+                                O Encontro Mineiro de Mulheres na Computação é um evento regional que reúne estudantes, pesquisadoras e profissionais da área de Computação do estado de Minas Gerais, visando incentivar e apoiar a participação feminina na Computação no estado. O evento tem por objetivo divulgar a participação feminina na Computação, especificamente a de mulheres que atuam em Minas Gerais, bem como divulgar e discutir políticas e ações que visem promover a inclusão de gênero na área de Computação no estado.
+                                <br><br>
+                                O evento promove:
+                                <ul style="font-size: 1.1em; color: rgb(90, 101, 112);">
+                                    <li>Divulgação de trabalhos realizados por pesquisadoras mineiras na área de Computação.</li>
+                                    <li>Divulgação de atuação de lideranças femininas na área de Computação em Minas Gerais.</li>
+                                    <li>Palestras, painéis e mesas-redondas sobre políticas e ações para inclusão feminina na área de Computação em Minas Gerais.</li>
+                                    <li>Oficinas e minicursos.</li>
+                                </ul>
                             </p>
                         </div>
                         <div
@@ -226,93 +205,6 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- End About Section -->
-
-            <!-- ======= About Section ======= -->
-            <section id="important_dates" class="about">
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <div class="col-lg-12 pt-5 pt-lg-0">
-                            <h3 data-aos="fade-up">Important Dates</h3>
-
-                            <p>
-                                <b
-                                    >All dates refer to midnight 23:59:59
-                                    <a
-                                        title="Anywhere on Earth"
-                                        href="https://www.timeanddate.com/time/zones/aoe"
-                                        target="_blank"
-                                    >
-                                        AoE</a
-                                    >.</b
-                                >
-                            </p>
-
-                            <div class="row schedule-item">
-                                <div class="col-md-4">
-                                    <p>Paper registration</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p>                                        
-                                        June 30, 2025
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="row schedule-item">
-                                <div class="col-md-4">
-                                    <p>Paper submission</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p>July 4, 2025</p>
-                                </div>
-                            </div>
-                            <div class="row schedule-item">
-                                <div class="col-md-4">
-                                    <p>Author notification</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p>August 4, 2025</p>
-                                </div>
-                            </div>
-                            <div class="row schedule-item">
-                                <div class="col-md-4">
-                                    <p>Camera-ready</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p>August 11, 2025</p>
-                                </div>
-                            </div>
-                            <div class="row schedule-item">
-                                <div class="col-md-4">
-                                    <p>Workshop date</p>
-                                </div>
-                                <div class="col-md-4">
-                                    <p>September 22, 2025</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="about">
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <div class="col-lg-12 pt-5 pt-lg-0">
-                            <h3 data-aos="fade-up">Location</h3>
-                            <p
-                                style="
-                                    text-align: justify;
-                                    text-justify: inter-word;
-                                "
-                            >
-                            Mar Hotel - R. Barão de Souza Leão, 451 - Boa Viagem, Recife - PE, 51030-300. 
-                            </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="map"></div>
             </section>
             <!-- End About Section -->
         </main>
