--- a/previousEditions.html
+++ b/previousEditions.html
@@ -75,36 +75,35 @@
                         <ul>
                             <li>
                                 <a class="nav-link scrollto" href="index.html"
-                                    >Home</a
+                                    >Início</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="attending.html"
-                                    >Attending</a
+                                    >Inscrições</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="callForPapers.html"
-                                    >Call for Papers</a
+                                    >Chamada de Trabalhos</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="keynotes.html"
-                                    >Keynote</a
+                                    >Palestrantes</a
                                 >
                             </li>
                             <li>
                                 <a class="nav-link scrollto" href="program.html"
-                                    >Agenda</a
+                                    >Programação</a
                                 >
                             </li>
-                            <!-- <li><a class="nav-link scrollto" href="acceptedPapers.html">Accepted Papers</a></li> -->
                             <li>
                                 <a
                                     class="nav-link scrollto"
@@ -112,13 +111,14 @@
                                     >Organização</a
                                 >
                             </li>
-                            <li>
+                            <!-- Hidden Previous Editions link -->
+                            <!-- <li>
                                 <a
                                     class="nav-link scrollto active"
                                     href="previousEditions.html"
                                     >Previous Editions</a
                                 >
-                            </li>
+                            </li> -->
                         </ul>
                     </ul>
                     <i class="bi bi-list mobile-nav-toggle"></i>
