--- a/_acceptedPapers_old.html
+++ b/_acceptedPapers_old.html
@@ -75,70 +75,50 @@
                         <ul>
                             <li>
                                 <a class="nav-link scrollto" href="index.html"
-                                    >Home</a
+                                    >Início</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="attending.html"
-                                    >Attending</a
+                                    >Inscrições</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="callForPapers.html"
-                                    >Call for Papers</a
+                                    >Chamada de Trabalhos</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="keynotes.html"
-                                    >Keynote</a
+                                    >Palestrantes</a
                                 >
                             </li>
                             <li>
                                 <a class="nav-link scrollto" href="program.html"
-                                    >Agenda</a
+                                    >Programação</a
                                 >
                             </li>
-                            <li>
-                                <a
-                                    class="nav-link scrollto active"
-                                    href="acceptedPapers.html"
-                                    >Accepted Papers</a
-                                >
-                            </li>
-                            <!-- <li class="dropdown">
-              <a href="program.html">
-                <span>Program</span>
-                <i class="bi bi-chevron-down"></i>
-              </a>
-              <ul>
-                <li>
-                  <a href="acceptedPapers.html">Accepted Papers</a>
-                </li>
-                 <li>
-                  <a href="panel.html">Panel</a>
-                </li> 
-              </ul>
-            </li>  -->
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="organization.html"
-                                    >Organization</a
+                                    >Organização</a
                                 >
                             </li>
-                            <li>
+                            <!-- Hidden Previous Editions link -->
+                            <!-- <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="previousEditions.html"
                                     >Previous Editions</a
                                 >
-                            </li>
+                            </li> -->
                         </ul>
                     </ul>
                     <i class="bi bi-list mobile-nav-toggle"></i>
