--- a/keynotes.html
+++ b/keynotes.html
@@ -75,43 +75,35 @@
                         <ul>
                             <li>
                                 <a class="nav-link scrollto" href="index.html"
-                                    >Home</a
+                                    >Início</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="attending.html"
-                                    >Attending</a
+                                    >Inscrições</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="callForPapers.html"
-                                    >Call for Papers</a
+                                    >Chamada de Trabalhos</a
                                 >
                             </li>
                             <li>
                                 <a
                                     class="nav-link scrollto active"
                                     href="keynotes.html"
-                                    >Keynote</a
+                                    >Palestrantes</a
                                 >
                             </li>
                             <li>
                                 <a class="nav-link scrollto" href="program.html"
-                                    >Agenda</a
+                                    >Programação</a
                                 >
                             </li>
-                            <!-- <li>
-                                <a
-                                    class="nav-link scrollto"
-                                    href="acceptedPapers.html"
-                                    >Accepted Papers</a
-                                >
-                            </li> -->
-                            <!-- <li class="dropdown"></li> -->
                             <li>
                                 <a
                                     class="nav-link scrollto"
@@ -119,13 +111,14 @@
                                     >Organização</a
                                 >
                             </li>
-                            <li>
+                            <!-- Hidden Previous Editions link -->
+                            <!-- <li>
                                 <a
                                     class="nav-link scrollto"
                                     href="previousEditions.html"
                                     >Previous Editions</a
                                 >
-                            </li>
+                            </li> -->
                         </ul>
                     </ul>
                     <i class="bi bi-list mobile-nav-toggle"></i>
@@ -134,115 +127,22 @@
             </div>
         </header>
         <!-- End Header -->
-
+        
         <main id="main">
             <!-- ======= Services Section ======= -->
-            <section id="keynotes" class="services section">
-                <div class="container" data-aos="fade-up">
-                    <div class="section-title">
-                        <p>Keynote</p>
-                    </div>
+            <section id="services" class="services section">
+            <div class="container" data-aos="fade-up">
 
-                    <!-- <div class="row" style="justify-content: center;">
-         <p class="sub-heading" style="text-align: center;">
-            <i>
-              <b style="color: orange;">
-                To be defined.
-              </b>
-            </i>
-          </p>
-        </div>  -->
-
-        <div class="row">
-          <h1 class="d-flex justify-content-center">To be defined </h1>
-        </div>
-
-                    <!-- <div class="row">
-                        <div class="col-lg-3 col-md-6 align-self-md-top">
-                            <div class="image-block" style="border-width: 0px">
-                                <img
-                                    src="assets/img/team/gustavo.jpg"
-                                    class="img-fluid"
-                                    style="width: 100%"
-                                    alt="speaker"
-                                />
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-md-6 align-self-center">
-                            <div class="content-block">
-                                <div class="name">
-                                    <h3 style="color: #4e4039">
-                                        <b>Gustavo Pinto</b>
-                                    </h3>
-                                </div>
-                                <div class="profession">
-                                    <p>
-                                        <b>Federal University of Pará (UFPA)</b>
-                                    </p>
-                                </div>
-                                <div
-                                    class="details"
-                                    style="
-                                        margin-top: 40px;
-                                        text-align: justify;
-                                    "
-                                >
-                                    <h5 style="line-height: 30px">
-                                        CDD in Action: The Good, the Bad, and
-                                        The Ugly of Tech Transfer
-                                    </h5>
-                                    <p>
-                                        Cognitive-Driven Development (CDD for
-                                        short) is a design coding technique that
-                                        aims to reduce the complexity of code
-                                        units (e.g., a class) by systematically
-                                        posing a limit in the number of coding
-                                        items — that adds complexity to that
-                                        code unit — that could be used at once.
-                                        Recent research works on CDD suggest
-                                        that this practice indeed help
-                                        developers to build and maintain modular
-                                        software. This is one side of the story.
-                                        <br />
-                                        The other side of the story is how
-                                        difficult it is to actually make
-                                        developers use CDD on daily basis. Time
-                                        pressure, lack of good tools, and adding
-                                        an another tool to the developers
-                                        arsenal may not be always seen as
-                                        beneficial. In this talk, we will
-                                        discuss the good and the bad of CDD
-                                        adoption in practice, with a few lessons
-                                        we learned throughout the process.
-                                        <br />
-                                    </p>
-                                    <h5 style="line-height: 30px">
-                                        About the Speaker
-                                    </h5>
-                                    <p style="color: black">
-                                        Gustavo is a Research Engineer at Zup
-                                        Innovation and an Assistant Professor at
-                                        the Federal University of Pará, in
-                                        Brazil. He is currently focused on
-                                        applying machine learning techniques to
-                                        improve software engineering tasks.
-                                        Gustavo is a well-published author, with
-                                        over 100 research papers published. He
-                                        writes regularly at his
-                                        <a href="https://ml4se.substack.com/"
-                                            >ML4SE</a
-                                        >
-                                        newsletter (in PT-BR).
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
+                <div class="section-title">
+                <p>Palestrantes</p>
                 </div>
-            </section>
-            <!-- End Services Section -->
-        </main>
-        <!-- End #main -->
+
+                <div class="row">
+                <h1 class="d-flex justify-content-center">A ser anunciado</h1>
+                </div>
+            </div>
+            </section><!-- End Services Section -->
+        </main><!-- End #main -->
 
         <!-- ======= Footer ======= -->
         <div w3-include-html="components/footer.html"></div>
