--- a/program.html
+++ b/program.html
@@ -56,14 +56,13 @@
       <nav id="navbar" class="navbar">
         <ul>
           <ul>
-            <li><a class="nav-link scrollto " href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="attending.html">Attending</a></li>
-            <li><a class="nav-link scrollto" href="callForPapers.html">Call for Papers</a></li>
-            <li><a class="nav-link scrollto" href="keynotes.html">Keynote</a></li>
-            <li><a class="nav-link scrollto active" href="program.html">Agenda</a></li>
-            <!-- <li><a class="nav-link scrollto" href="acceptedPapers.html">Accepted Papers</a></li> -->
+            <li><a class="nav-link scrollto" href="index.html">Início</a></li>
+            <li><a class="nav-link scrollto" href="attending.html">Inscrições</a></li>
+            <li><a class="nav-link scrollto" href="callForPapers.html">Chamada de Trabalhos</a></li>
+            <li><a class="nav-link scrollto" href="keynotes.html">Palestrantes</a></li>
+            <li><a class="nav-link scrollto active" href="program.html">Programação</a></li>
             <li><a class="nav-link scrollto" href="organization.html">Organização</a></li>
-            <li><a class="nav-link scrollto" href="previousEditions.html">Previous Editions</a></li>
+            <!-- <li><a class="nav-link scrollto" href="previousEditions.html">Previous Editions</a></li> -->
           </ul>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -78,242 +77,12 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <p>Agenda</p>
+          <p>Programação</p>
         </div>
 
         <div class="row">
-          <h1 class="d-flex justify-content-center">To be defined </h1>
+          <h1 class="d-flex justify-content-center">A ser anunciado</h1>
         </div>
-
-        <!-- <div class="row" style="justify-content: center;">
-
-          <div class="table-responsive tab-pane fade show active schedule-item">
-            <table class="table table-hover" style="background-color: white">
-              <tbody>
-              <tr style="background-color: rgb(248, 239, 238);">
-                
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>09:45-10:00
-                </td>
-                <td>
-                  <span>Opening</span>
-                </td>
-              </tr>
-              <tr style="background-color: #b3d810; color: black">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>10:00-10:45
-                </td>
-                <td>
-                  <b>Session 1: Artificial Intelligence and Automation in Software Development</b>
-                  <br>
-                </td>
-              </tr>
-              <tr style="background-color: #b3d692; color: black">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>10:00-10:15
-                </td>
-                <td>
-                  <i>Investigando o Uso da Inteligência Artificial em Projetos Python Hospedados no GitHub</i>
-                  <br>Authors: Luiz André Ubaldo (IFPR Student, Brazil), Jailton Coelho (IFPR, Brazil)
-                  <br>Presentation: 10:00 - 10:10 
-                  <br>Discussion: 10:10 - 10:15 
-                </td>
-              </tr>
-              <tr style="background-color: #b3d692; color: black">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>10:15-10:30
-                </td>
-                <td>
-                  <i>What Developers Ask to ChatGPT in GitHub Pull Requests: An Exploratory Study</i>
-                  <br>Authors: Julyanara Rodrigues Silva  (IFTM - Campus Uberlândia Centro, Brazil), Carlos Eduardo Carvalho Dantas (do Instituto Federal do Triangulo Mineiro/Uberlândia Centro, Brazil), Marcelo de Almeida Maia (UFU, Brazil)
-                  <br>Presentation: 10:15 - 10:25 
-                  <br>Discussion: 10:25 - 10:30 
-                </td>
-              </tr>
-              <tr style="background-color: #b3d692; color: black">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>10:30-10:45
-                </td>
-                <td>
-                  <i>Exploring the Impact of DevOps and Agile Practices from the Perspective of Source Code Analysis</i>
-                  <br>Authors: Johnatan Alves Oliveira (UFLA, Brazil), Juliana Padilha (PUCMG, Brazil), Jalles Daniel  do Nascimento Barros (FUNIP, Brazil), Luiz Carlos Douglas de Jesus (Luiz Carlos, Brazil)
-                  <br>Presentation: 10:30 - 10:40 
-                  <br>Discussion: 10:40 - 10:45                 
-                </td>
-              </tr>
-              
-              <tr style="background-color: #31c4f5;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>10:45-12:00
-                </td>
-                <td>
-                  <b>Session 2: Software Architecture and Maintenance</b>
-                </td>
-              </tr>
-              <tr style="background-color: #c8f0fd;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>10:45-11:00
-                </td>
-                <td>
-                  <i>Atoms of Confusion in the Android Open Source Project: A Prevalence Study</i>
-                  <br>Authors: Davi Batista Tabosa (UFC, Brazil), Windson Carvalho (UFC, Brazil), Lincoln S. Rocha (Federal University of Ceará, Brazil) 
-                  <br>Presentation: 10:45 - 10:55 
-                  <br>Discussion: 10:55 - 11:00  
-                </td>
-              </tr>
-              <tr style="background-color: #c8f0fd;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>11:00-11:15
-                </td>
-                <td>
-                  <i>Understanding Group Maintainership Model in the Linux Kernel Development</i>
-                  <br>Authors: Eduardo Pinheiro (USP, Brazil), Paulo Meirelles (USP, Brazil)
-                  <br>Presentation: 11:00 - 11:10
-                  <br>Discussion: 11:10 - 11:15
-                </td>
-              </tr>
-              <tr style="background-color: #c8f0fd;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>11:15-11:30
-                </td>
-                <td>
-                  <i>Analisando a Qualidade do Código em Plataformas de Cursos Online Abertos e Massivos</i>
-                  <br>Authors: Otávio Vinícius Rocha (PUC Minas, Brazil), Aline Brito (PUC Minas, Brazil), Cleiton Silva Tavares (PUC Minas, Brazil), Laerte Xavier (PUC Minas, Brazil), Simone Assis (PUC Minas, Brazil)
-                  <br>Presentation: 11:15 - 11:25
-                  <br>Discussion: 11:25 - 11:30
-                </td>
-              </tr>
-              <tr style="background-color: #c8f0fd;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>11:30-11:45
-                </td>
-                <td>
-                  <i>Troca de Bibliotecas em Sistemas com e sem Arquitetura Limpa: Uma Análise de Esforço</i>
-                  <br>Authors: Vinicius Tavares Pimenta (Federal University of São João del-Rei, Brazil), Elder José Reioli Cirilo (Federal University of São João del-Rei, Brazil), Ricardo Terra (UFLA, Brazil)
-                  <br>Presentation: 11:30 - 11:40
-                  <br>Discussion: 11:40 - 11:45
-                </td>
-              </tr>
-              <tr style="background-color: #c8f0fd;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>11:45-12:00
-                </td>
-                <td>
-                  <i>An Industry View about Legacy Systems</i>
-                  <br>Authors: Andréa Sabedra Bordin (UFSC, Brazil), Luiza Carolina Miranda Garcia (UFSC, Brazil)
-                  <br>Presentation: 11:45 - 11:55
-                  <br>Discussion: 11:55 - 12:00
-                </td>
-              </tr>
-              <tr style="background-color: rgb(248, 239, 238);">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>12:00-14:00
-                </td>
-                <td>
-                  Lunch
-                </td>
-              </tr>
-              <tr style="background-color: #e67e23;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>14:00-15:15
-                </td>
-                <td>
-                  <b>Session 3: Code Quality, Testing and Smells in Software </b><br>
-                </td>
-              </tr>
-              <tr style="background-color: #fddac0;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>14:00-14:10
-                </td>
-                <td>
-                  <i>Análise da Influência da Aprendizagem Baseada em Projeto na Qualidade de Código de Jogos Digitais</i>
-                  <br>Authors: Pedro Belo (PUC Minas, Brazil), Laerte Xavier (PUC Minas, Brazil)
-                  <br>Presentation: 14:00 - 14:10
-                  <br>Discussion: 14:10 - 14:15
-                </td>
-              </tr>
-              <tr style="background-color: #fddac0;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>14:15-14:30
-                </td>
-                <td>
-                  <i>GASH: The GitHub Actions Smell Hunter</i>
-                  <br>Authors: Matheus Britto (UFC, Brazil), Lincoln S. Rocha (UFC, Brazil)
-                  <br>Presentation: 14:15 - 14:25
-                  <br>Discussion: 14:25 - 14:30
-                </td>
-              </tr>
-              <tr style="background-color: #fddac0;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>14:30-14:45
-                </td>
-                <td>
-                  <i>Towards a Product Line for Electronic Shelf Labels Domain</i>
-                  <br>Authors: Leonardo Teixeira (UFSCAR, Brazil), André Luiz de Oliveira (UFJF, Brazil), Fredy João Valente (UFSCAR, Brazil), Fabiano Cutigi Ferrari (UFSCAR, Brazil), Valter Vieira Camargo (UFSCAR, Brazil)
-                  <br>Presentation: 14:30 - 14:40
-                  <br>Discussion: 14:40 - 14:45
-                </td>
-              </tr>
-              <tr style="background-color: #fddac0;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>14:45-15:00
-                </td>
-                <td>
-                  <i>Evaluating Test Quality in GitHub Repositories: A Comparative Analysis of CI/CD Practices Using GitHub Actions</i>
-                  <br>Authors: Rodolfo Rocha Rodrigues (PUCMG, Brazil), Edson Júnior Campolina Silva (PUCMG, Brazil), Danilo Boechat Seufitelli (PUCMG, Brazil), Johnatan Alves Oliveira (UFLA, Brazil), Cleiton Silva Tavares (PUCMG, Brazil)
-                  <br>Presentation: 14:45 - 14:55
-                  <br>Discussion: 14:55 - 15:00
-                </td>
-              </tr>
-              <tr style="background-color: #fddac0;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>15:00-15:15
-                </td>
-                <td>
-                  <i>Identificação de Smells em Testes Fim-a-Fim Implementados em Cypress</i>
-                  <br>Authors: Larissa Bicalho (UFMG, Brazil), João Eduardo Montandon (UFMG, Brazil), Marco Tulio Valente (UFMG, Brazil)
-                  <br>Presentation: 15:00 - 15:10
-                  <br>Discussion: 15:10 - 15:15
-                </td>
-              </tr>
-              <tr style="background-color: rgb(248, 239, 238);">
-                <td  width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>15:15-16:00
-                </td>
-                <td>
-                  Coffee break
-                </td>
-              </tr>
-              <tr style="background-color: #d6707f;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>16:00-17:30
-                </td>
-                <td>
-                  <b><a style="color: black;" href="keynotes.html">Keynote by Gustavo Pinto (UFPA)</a></b> 
-                </td>
-              </tr>
-              <tr style="background-color: #ffd059;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>17:30-19:00
-                </td>
-                <td>
-                  <b>Awards and Closing
-                </td>
-              </tr>
-              <tr style="background-color: #debfeb;">
-                <td width="15%">
-                  <i class="bi bi-clock" style="margin-right: 10px"></i>19:00-20:00
-                </td>
-                <td>
-                  <b>VEM Steering Committee Meeting</b>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-          </div>
-
-        </div> -->
-
       </div>
     </section><!-- End Services Section -->
   </main><!-- End #main -->
