--- a/callForPapers.html
+++ b/callForPapers.html
@@ -40,11 +40,16 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <div class="logo">
-<!--        <h1 class="text-light"><a href="index.html"><span>VEM2023</span></a></h1>-->
-        <!-- Uncomment below if you prefer to use an image logo -->
-         <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
-         <a href="index.html"><img src="assets/img/vem2025-h.png" alt="" class="img-fluid"></a>
+       <div class="logo">
+          <!--        <h1 class="text-light"><a href="index.html"><span>VEM2023</span></a></h1>-->
+          <!-- Uncomment below if you prefer to use an image logo -->
+          <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
+          <a href="index.html"
+              ><img
+                  src="assets/img/logo_nome.png"
+                  alt=""
+                  class="img-fluid"
+          /></a>
       </div>
 
       <nav id="navbar" class="navbar">
