--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <meta content="" name="keywords" />
 
         <!-- Favicons -->
-        <link href="assets/img/favicon_vem.png" rel="icon" />
-        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+        <link href="assets/img/logo.png" rel="icon" />
 
         <!-- Google Fonts -->
         <link
@@ -77,7 +76,7 @@
                     <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
                     <a href="index.html"
                         ><img
-                            src="assets/img/vem2025-h.png"
+                            src="assets/img/logo_nome.png"
                             alt=""
                             class="img-fluid"
                     /></a>
@@ -148,20 +147,7 @@
                     <div
                         class="col-lg-8 order-2 order-lg-1 d-flex flex-column justify-content-center"
                     >
-                        <h1>
-                            1 Encontro Mineiro de Mulheres na Computação
-                        </h1>
-                        <h3>
-                            Local a definir
-                        </h3>
-                    </div>
-                    <div class="col-lg-4 order-1 order-lg-2 hero-img">
-                        <!-- <img src="assets/img/vem_big.png" class="img-fluid animated" alt=""> -->
-                        <img
-                            src="assets/img/vem2025-1.png"
-                            class="img-fluid animated"
-                            alt=""
-                        />
+                        
                     </div>
                 </div>
             </div>
@@ -196,7 +182,7 @@
                             class="col-lg-4 d-flex align-items-center justify-content-center about-img"
                         >
                             <img
-                                src="assets/img/cbsoft2025-horizontal-menor.png"
+                                src="assets/img/logo_nome.png"
                                 class="img-fluid"
                                 alt=""
                                 data-aos="zoom-in"
