--- a/organization.html
+++ b/organization.html
@@ -9,8 +9,7 @@
         <meta content="" name="keywords" />
 
         <!-- Favicons -->
-        <link href="assets/img/favicon_vem.png" rel="icon" />
-        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+        <link href="assets/img/logo.png" rel="icon" />
 
         <!-- Google Fonts -->
         <link
@@ -72,13 +71,13 @@
             <div
                 class="container d-flex align-items-center justify-content-between"
             >
-                <div class="logo">
-                    <!--        <h1 class="text-light"><a href="index.html"><span>VEM2022</span></a></h1>-->
+                 <div class="logo">
+                    <!--        <h1 class="text-light"><a href="index.html"><span>VEM2023</span></a></h1>-->
                     <!-- Uncomment below if you prefer to use an image logo -->
                     <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
                     <a href="index.html"
                         ><img
-                            src="assets/img/vem2025-h.png"
+                            src="assets/img/logo_nome.png"
                             alt=""
                             class="img-fluid"
                     /></a>
@@ -153,7 +152,7 @@
                     <div class="row" style="justify-content: center">
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Kecia-CEFET.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Kecia Aline Marques Ferreira</h4>
@@ -173,7 +172,7 @@
                         <!-- Primeira linha -->
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Aline-UFOP.jpeg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Aline Norberta de Brito</h4>
@@ -185,7 +184,7 @@
 
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/AnaPaula-PUCMinas.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Ana Paula de Carvalho</h4>
@@ -197,7 +196,7 @@
 
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Andrea-UFOP.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Andrea Gomes Campos Bianchi</h4>
@@ -212,7 +211,7 @@
                         <!-- Segunda linha -->
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Glivia-CEFET.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Glívia Angélica Rodrigues Barbosa</h4>
@@ -224,7 +223,7 @@
 
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Joana-PUCMinas.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Joana Gabriela Ribeiro de Souza</h4>
@@ -236,7 +235,7 @@
 
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/MichelleHanne-PUCMinas.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Michelle Hanne Soares de Andrade</h4>
@@ -251,7 +250,7 @@
                         <!-- Terceira linha -->
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Silvia-CEFET.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Sílvia Calmon de Albuquerque</h4>
@@ -263,7 +262,7 @@
 
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                             <div class="member">
-                                <img src="assets/img/team/pngtre - female avatar icon - 4005060.png" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/Thabata-CEFET.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Thabatta Moreira Alves de Araújo</h4>
