--- a/previousEditions.html
+++ b/previousEditions.html
@@ -9,8 +9,7 @@
         <meta content="" name="keywords" />
 
         <!-- Favicons -->
-        <link href="assets/img/favicon_vem.png" rel="icon" />
-        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+        <link href="assets/img/logo.png" rel="icon" />
 
         <!-- Google Fonts -->
         <link
@@ -59,12 +58,12 @@
                 class="container d-flex align-items-center justify-content-between"
             >
                 <div class="logo">
-                    <!--        <h1 class="text-light"><a href="index.html"><span>VEM2022</span></a></h1>-->
+                    <!--        <h1 class="text-light"><a href="index.html"><span>VEM2023</span></a></h1>-->
                     <!-- Uncomment below if you prefer to use an image logo -->
                     <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
                     <a href="index.html"
                         ><img
-                            src="assets/img/vem2025-h.png"
+                            src="assets/img/logo_nome.png"
                             alt=""
                             class="img-fluid"
                     /></a>
