--- a/program.html
+++ b/program.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon_vem.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -41,16 +40,16 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <div class="logo">
-<!--        <h1 class="text-light"><a href="index.html"><span>VEM2022</span></a></h1>-->
-        <!-- Uncomment below if you prefer to use an image logo -->
-         <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
-         <a href="index.html"
-                        ><img
-                            src="assets/img/vem2025-h.png"
-                            alt=""
-                            class="img-fluid"
-                    /></a>
+       <div class="logo">
+          <!--        <h1 class="text-light"><a href="index.html"><span>VEM2023</span></a></h1>-->
+          <!-- Uncomment below if you prefer to use an image logo -->
+          <!-- <a href="index.html"><img src="assets/img/vem_color.png" alt="" class="img-fluid"></a> -->
+          <a href="index.html"
+              ><img
+                  src="assets/img/logo_nome.png"
+                  alt=""
+                  class="img-fluid"
+          /></a>
       </div>
 
       <nav id="navbar" class="navbar">
